--- a/requirements.txt
+++ b/requirements.txt
@@ -57,9 +57,10 @@ jsonpointer==2.4
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
-langchain==0.0.339
+langchain==0.0.353
+langchain-community==0.0.7
 langchain-core==0.1.4
-langsmith==0.0.65
+langsmith==0.0.75
 marshmallow==3.20.1
 monotonic==1.6
 mpmath==1.3.0
