--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Automat==22.10.0
 backoff==2.2.1
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
+behave==1.2.6
 cachetools==5.3.2
 certifi==2023.7.22
 cffi==1.16.0
@@ -57,10 +58,12 @@ jsonpointer==2.4
 jsonschema==4.19.2
 jsonschema-specifications==2023.7.1
 kubernetes==28.1.0
-langchain==0.0.353
-langchain-community==0.0.7
-langchain-core==0.1.4
-langsmith==0.0.75
+langchain==0.1.13
+langchain-community==0.0.29
+langchain-core==0.1.33
+langchain-openai==0.1.1
+langchain-text-splitters==0.0.1
+langsmith==0.1.31
 marshmallow==3.20.1
 monotonic==1.6
 mpmath==1.3.0
@@ -71,7 +74,7 @@ neovim==0.3.1
 numpy==1.26.1
 oauthlib==3.2.2
 onnxruntime==1.16.2
-openai==1.2.3
+openai==1.14.2
 openapi==1.1.0
 opentelemetry-api==1.21.0
 opentelemetry-exporter-otlp-proto-common==1.21.0
@@ -79,8 +82,11 @@ opentelemetry-exporter-otlp-proto-grpc==1.21.0
 opentelemetry-proto==1.21.0
 opentelemetry-sdk==1.21.0
 opentelemetry-semantic-conventions==0.42b0
+orjson==3.9.15
 overrides==7.4.0
 packaging==23.2
+parse==1.20.1
+parse-type==0.6.2
 posthog==3.0.2
 protobuf==4.25.1
 psycopg==3.1.12
@@ -100,6 +106,7 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 redis==5.0.1
 referencing==0.30.2
+regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==1.3.1
 rpds-py==0.10.6
@@ -113,6 +120,7 @@ sqlparse==0.4.4
 starlette==0.27.0
 sympy==1.12
 tenacity==8.2.3
+tiktoken==0.6.0
 tokenizers==0.15.0
 tqdm==4.66.1
 Twisted==23.10.0
