--- a/requirements.txt
+++ b/requirements.txt
@@ -1,140 +1,140 @@
-aiohttp==3.8.6
+aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
-anyio==3.7.1
-asgiref==3.7.2
+anyio==4.3.0
+asgiref==3.8.1
 async-timeout==4.0.3
-attrs==23.1.0
+attrs==23.2.0
 autobahn==23.6.2
 Automat==22.10.0
 backoff==2.2.1
-bcrypt==4.0.1
-beautifulsoup4==4.12.2
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
 behave==1.2.6
-cachetools==5.3.2
-certifi==2023.7.22
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.16.0
 channels==4.0.0
-channels-redis==4.1.0
+channels-redis==4.2.0
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
 click==8.1.7
 coloredlogs==15.0.1
 constantly==23.10.4
-cryptography==41.0.5
-daphne==4.0.0
-dataclasses-json==0.6.2
+cryptography==42.0.5
+daphne==4.1.0
+dataclasses-json==0.6.4
 Deprecated==1.2.14
-distro==1.8.0
-Django==4.2.7
+distro==1.9.0
+Django==5.0.3
 django-cors-headers==4.3.1
 django-environ==0.11.2
-djangorestframework==3.14.0
-faiss-cpu==1.7.4
-fastapi==0.104.1
-filelock==3.13.1
-flatbuffers==23.5.26
-frozenlist==1.4.0
-fsspec==2023.10.0
-google-auth==2.23.4
-googleapis-common-protos==1.61.0
-greenlet==3.0.1
-grpcio==1.59.3
+djangorestframework==3.15.1
+faiss-cpu==1.8.0
+fastapi==0.110.0
+filelock==3.13.3
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.3.1
+google-auth==2.29.0
+googleapis-common-protos==1.63.0
+greenlet==3.0.3
+grpcio==1.62.1
 h11==0.14.0
-httpcore==1.0.2
+httpcore==1.0.5
 httptools==0.6.1
-httpx==0.25.1
-huggingface-hub==0.19.4
+httpx==0.27.0
+huggingface-hub==0.22.1
 humanfriendly==10.0
 hyperlink==21.0.0
-idna==3.4
+idna==3.6
 ijson==3.2.3
-importlib-metadata==6.8.0
-importlib-resources==6.1.1
+importlib-metadata==6.11.0
+importlib_resources==6.4.0
 incremental==22.10.0
 inflection==0.5.1
 jsonpatch==1.33
 jsonpointer==2.4
-jsonschema==4.19.2
-jsonschema-specifications==2023.7.1
-kubernetes==28.1.0
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kubernetes==29.0.0
 langchain==0.1.13
 langchain-community==0.0.29
-langchain-core==0.1.33
+langchain-core==0.1.35
 langchain-openai==0.1.1
 langchain-text-splitters==0.0.1
-langsmith==0.1.31
-marshmallow==3.20.1
+langsmith==0.1.36
+marshmallow==3.21.1
 monotonic==1.6
 mpmath==1.3.0
-msgpack==1.0.7
-multidict==6.0.4
+msgpack==1.0.8
+multidict==6.0.5
 mypy-extensions==1.0.0
 neovim==0.3.1
-numpy==1.26.1
+numpy==1.26.4
 oauthlib==3.2.2
-onnxruntime==1.16.2
-openai==1.14.2
+onnxruntime==1.17.1
+openai==1.14.3
 openapi==1.1.0
-opentelemetry-api==1.21.0
-opentelemetry-exporter-otlp-proto-common==1.21.0
-opentelemetry-exporter-otlp-proto-grpc==1.21.0
-opentelemetry-proto==1.21.0
-opentelemetry-sdk==1.21.0
-opentelemetry-semantic-conventions==0.42b0
-orjson==3.9.15
-overrides==7.4.0
+opentelemetry-api==1.23.0
+opentelemetry-exporter-otlp-proto-common==1.23.0
+opentelemetry-exporter-otlp-proto-grpc==1.23.0
+opentelemetry-proto==1.23.0
+opentelemetry-sdk==1.23.0
+opentelemetry-semantic-conventions==0.44b0
+orjson==3.10.0
+overrides==7.7.0
 packaging==23.2
 parse==1.20.1
 parse-type==0.6.2
-posthog==3.0.2
-protobuf==4.25.1
-psycopg==3.1.12
+posthog==3.5.0
+protobuf==4.25.3
+psycopg==3.1.18
 psycopg2==2.9.9
-pulsar-client==3.3.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
+pulsar-client==3.4.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycparser==2.21
-pydantic==2.4.2
-pydantic_core==2.10.1
-pynvim==0.4.3
-pyOpenSSL==23.3.0
+pydantic==2.6.4
+pydantic_core==2.16.3
+pynvim==0.5.0
+pyOpenSSL==24.1.0
 PyPika==0.48.9
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3.post1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
 PyYAML==6.0.1
-redis==5.0.1
-referencing==0.30.2
+redis==5.0.3
+referencing==0.34.0
 regex==2023.12.25
 requests==2.31.0
-requests-oauthlib==1.3.1
-rpds-py==0.10.6
+requests-oauthlib==2.0.0
+rpds-py==0.18.0
 rsa==4.9
-service-identity==23.1.0
+service-identity==24.1.0
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 soupsieve==2.5
-SQLAlchemy==2.0.23
+SQLAlchemy==2.0.29
 sqlparse==0.4.4
-starlette==0.27.0
+starlette==0.36.3
 sympy==1.12
 tenacity==8.2.3
 tiktoken==0.6.0
-tokenizers==0.15.0
-tqdm==4.66.1
-Twisted==23.10.0
+tokenizers==0.15.2
+tqdm==4.66.2
+Twisted==24.3.0
 txaio==23.1.1
-typer==0.9.0
+typer==0.11.0
 typing-inspect==0.9.0
-typing_extensions==4.8.0
-urllib3==1.26.18
-uvicorn==0.24.0.post1
+typing_extensions==4.10.0
+urllib3==2.2.1
+uvicorn==0.29.0
 uvloop==0.19.0
 watchfiles==0.21.0
-websocket-client==1.6.4
+websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
-yarl==1.9.2
-zipp==3.17.0
-zope.interface==6.1
+yarl==1.9.4
+zipp==3.18.1
+zope.interface==6.2
