--- a/requirements.txt
+++ b/requirements.txt
@@ -1,140 +1,106 @@
-aiohttp>=3.9.3
-aiosignal>=1.3.1
-annotated-types>=0.6.0
-anyio>=4.3.0
-asgiref>=3.8.1
-async-timeout>=4.0.3
-attrs>=23.2.0
-autobahn>=23.6.2
-Automat>=22.10.0
-backoff>=2.2.1
-bcrypt>=4.1.2
-beautifulsoup4>=4.12.3
-behave>=1.2.6
-cachetools>=5.3.3
-certifi>=2024.2.2
-cffi>=1.16.0
-channels>=4.0.0
-channels-redis>=4.2.0
-charset-normalizer>=3.3.2
-chroma-hnswlib>=0.7.3
-click>=8.1.7
-coloredlogs>=15.0.1
-constantly>=23.10.4
-cryptography>=42.0.5
-daphne>=4.1.0
-dataclasses-json>=0.6.4
-Deprecated>=1.2.14
-distro>=1.9.0
-Django>=5.0.3
-django-cors-headers>=4.3.1
-django-environ>=0.11.2
-djangorestframework>=3.15.1
-faiss-cpu>=1.8.0
-fastapi>=0.110.0
-filelock>=3.13.3
-flatbuffers>=24.3.25
-frozenlist>=1.4.1
-fsspec>=2024.3.1
-google-auth>=2.29.0
-googleapis-common-protos>=1.63.0
-greenlet>=3.0.3
-grpcio>=1.62.1
-h11>=0.14.0
-httpcore>=1.0.5
-httptools>=0.6.1
-httpx>=0.27.0
-huggingface-hub>=0.22.1
-humanfriendly>=10.0
-hyperlink>=21.0.0
-idna>=3.6
-ijson>=3.2.3
-importlib-metadata>=6.11.0
-importlib_resources>=6.4.0
-incremental>=22.10.0
-inflection>=0.5.1
-jsonpatch>=1.33
-jsonpointer>=2.4
-jsonschema>=4.21.1
-jsonschema-specifications>=2023.12.1
-kubernetes>=29.0.0
-langchain>=0.1.13
-langchain-community>=0.0.29
-langchain-core>=0.1.35
-langchain-openai>=0.1.1
-langchain-text-splitters>=0.0.1
-langsmith>=0.1.36
-marshmallow>=3.21.1
-monotonic>=1.6
-mpmath>=1.3.0
-msgpack>=1.0.8
-multidict>=6.0.5
-mypy-extensions>=1.0.0
-neovim>=0.3.1
-numpy>=1.26.4
-oauthlib>=3.2.2
-onnxruntime>=1.17.1
-openai>=1.14.3
-openapi>=1.1.0
-opentelemetry-api>=1.23.0
-opentelemetry-exporter-otlp-proto-common>=1.23.0
-opentelemetry-exporter-otlp-proto-grpc>=1.23.0
-opentelemetry-proto>=1.23.0
-opentelemetry-sdk>=1.23.0
-opentelemetry-semantic-conventions>=0.44b0
-orjson>=3.10.0
-overrides>=7.7.0
-packaging>=23.2
-parse>=1.20.1
-parse-type>=0.6.2
-posthog>=3.5.0
-protobuf>=4.25.3
-psycopg>=3.1.18
-psycopg2>=2.9.9
-pulsar-client>=3.4.0
-pyasn1>=0.6.0
-pyasn1_modules>=0.4.0
-pycparser>=2.21
-pydantic>=2.6.4
-pydantic_core>=2.16.3
-pynvim>=0.5.0
-pyOpenSSL>=24.1.0
-PyPika>=0.48.9
-python-dateutil>=2.9.0.post0
-python-dotenv>=1.0.1
-pytz>=2024.1
-PyYAML>=6.0.1
-redis>=5.0.3
-referencing>=0.34.0
-regex>=2023.12.25
-requests>=2.31.0
-requests-oauthlib>=2.0.0
-rpds-py>=0.18.0
-rsa>=4.9
-service-identity>=24.1.0
-six>=1.16.0
-sniffio>=1.3.1
-soupsieve>=2.5
-SQLAlchemy>=2.0.29
-sqlparse>=0.4.4
-starlette>=0.36.3
-sympy>=1.12
-tenacity>=8.2.3
-tiktoken>=0.6.0
-tokenizers>=0.15.2
-tqdm>=4.66.2
-Twisted>=24.3.0
-txaio>=23.1.1
-typer>=0.11.0
-typing-inspect>=0.9.0
-typing_extensions>=4.10.0
-urllib3>=2.2.1
-uvicorn>=0.29.0
-uvloop>=0.19.0
-watchfiles>=0.21.0
-websocket-client>=1.7.0
-websockets>=12.0
-wrapt>=1.16.0
-yarl>=1.9.4
-zipp>=3.18.1
-zope.interface>=6.2
+annotated-types==0.6.0
+apparmor==3.1.7
+application-utility==1.3.2
+attrs==23.2.1.dev0
+autocommand==2.2.2
+beautifulsoup4==4.12.3
+btrfsutil==6.8.1
+build==1.2.1
+certifi==2024.2.2
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+colorama==0.4.6
+ConfigArgParse==1.5.5
+cryptography==42.0.5
+cupshelpers==1.0
+dbus-python==1.3.2
+decorator==5.1.1
+distlib==0.3.8
+distro==1.9.0
+dnspython==2.5.0
+docopt==0.6.2
+evdev==1.7.0
+Faker==24.11.0
+fastjsonschema==2.19.1
+filelock==3.13.3
+greenlet==3.0.3
+grpcio==1.62.1
+gufw==24.4.0
+html5lib==1.1
+idna==3.6
+inflect==7.2.1
+installer==0.7.0
+jaraco.context==4.3.0
+jaraco.functools==4.0.1
+jaraco.text==3.12.0
+keyutils==0.6
+lensfun==0.3.4
+LibAppArmor==3.1.7
+libtorrent==2.0.10
+lit==17.0.6.dev0
+louis==3.29.0
+lxml==5.1.0
+moddb==0.10.0
+more-itertools==10.2.0
+msgpack==1.0.5
+netsnmp-python==1.0a1
+nftables==0.1
+npyscreen==4.10.5
+numpy==1.26.4
+OpenCC==1.1.7
+ordered-set==4.1.0
+packaging==23.2
+pacman_mirrors==4.24.0
+pillow==10.3.0
+pipenv==2023.12.1
+platformdirs==4.2.0
+ply==3.11
+psutil==5.9.8
+pycairo==1.26.0
+pycparser==2.22
+pycups==2.0.4
+pycurl==7.45.2
+pydantic==2.7.1
+pydantic_core==2.18.2
+PyGObject==3.48.2
+pynvim==0.5.0
+pyOpenSSL==24.0.0
+pyproject_hooks==1.1.0
+PyQt5==5.15.10
+PyQt5_sip==12.13.0
+pyrate-limiter==3.6.0
+PySide6==6.7.0
+pysmbc==1.0.25.1
+pyte==0.8.2
+python-dateutil==2.9.0
+pyxdg==0.28
+PyYAML==6.0.1
+reportlab==4.1.0
+repoze.lru==0.7
+requests==2.31.0
+rofimoji==6.3.0
+Routes==2.5.1
+setuptools==69.0.3
+shiboken6==6.7.0
+shiboken6-generator==6.7.0
+six==1.16.0
+smbus==1.1
+soupsieve==2.5
+systemd-python==235
+TBB==0.2
+thefuck==3.32
+tomli==2.0.1
+toolz==0.12.1
+trove-classifiers==2024.4.10
+typeguard==4.2.1
+typing_extensions==4.11.0
+udiskie==2.5.2
+ufw==0.36.2
+urllib3==1.26.18
+validate-pyproject==0.16
+virtualenv==20.25.0
+virtualenv-clone==0.5.7
+wcwidth==0.2.13
+webencodings==0.5.1
+wheel==0.43.0
