--- a/requirements.txt
+++ b/requirements.txt
@@ -1,106 +1,175 @@
-annotated-types==0.6.0
-apparmor==3.1.7
-application-utility==1.3.2
-attrs==23.2.1.dev0
-autocommand==2.2.2
-beautifulsoup4==4.12.3
-btrfsutil==6.8.1
-build==1.2.1
-certifi==2024.2.2
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.3.2
-colorama==0.4.6
-ConfigArgParse==1.5.5
-cryptography==42.0.5
-cupshelpers==1.0
-dbus-python==1.3.2
-decorator==5.1.1
-distlib==0.3.8
-distro==1.9.0
-dnspython==2.5.0
-docopt==0.6.2
-evdev==1.7.0
-Faker==24.11.0
-fastjsonschema==2.19.1
-filelock==3.13.3
-greenlet==3.0.3
-grpcio==1.62.1
-gufw==24.4.0
-html5lib==1.1
-idna==3.6
-inflect==7.2.1
-installer==0.7.0
-jaraco.context==4.3.0
-jaraco.functools==4.0.1
-jaraco.text==3.12.0
-keyutils==0.6
-lensfun==0.3.4
-LibAppArmor==3.1.7
-libtorrent==2.0.10
-lit==17.0.6.dev0
-louis==3.29.0
-lxml==5.1.0
-moddb==0.10.0
-more-itertools==10.2.0
-msgpack==1.0.5
-netsnmp-python==1.0a1
-nftables==0.1
-npyscreen==4.10.5
-numpy==1.26.4
-OpenCC==1.1.7
-ordered-set==4.1.0
-packaging==23.2
-pacman_mirrors==4.24.0
-pillow==10.3.0
-pipenv==2023.12.1
-platformdirs==4.2.0
-ply==3.11
-psutil==5.9.8
-pycairo==1.26.0
-pycparser==2.22
-pycups==2.0.4
-pycurl==7.45.2
-pydantic==2.7.1
-pydantic_core==2.18.2
-PyGObject==3.48.2
-pynvim==0.5.0
-pyOpenSSL==24.0.0
-pyproject_hooks==1.1.0
-PyQt5==5.15.10
-PyQt5_sip==12.13.0
-pyrate-limiter==3.6.0
-PySide6==6.7.0
-pysmbc==1.0.25.1
-pyte==0.8.2
-python-dateutil==2.9.0
-pyxdg==0.28
-PyYAML==6.0.1
-reportlab==4.1.0
-repoze.lru==0.7
-requests==2.31.0
-rofimoji==6.3.0
-Routes==2.5.1
-setuptools==69.0.3
-shiboken6==6.7.0
-shiboken6-generator==6.7.0
-six==1.16.0
-smbus==1.1
-soupsieve==2.5
-systemd-python==235
-TBB==0.2
-thefuck==3.32
-tomli==2.0.1
-toolz==0.12.1
-trove-classifiers==2024.4.10
-typeguard==4.2.1
-typing_extensions==4.11.0
-udiskie==2.5.2
-ufw==0.36.2
-urllib3==1.26.18
-validate-pyproject==0.16
-virtualenv==20.25.0
-virtualenv-clone==0.5.7
-wcwidth==0.2.13
-webencodings==0.5.1
-wheel==0.43.0
+aiohttp
+aiosignal
+amqp
+annotated-types
+anyio
+asgiref
+async-timeout
+attrs
+autobahn
+Automat
+backoff
+bcrypt
+beautifulsoup4
+behave
+billiard
+build
+cachetools
+celery
+certifi
+cffi
+channels
+channels-redis
+charset-normalizer
+chroma-hnswlib
+chromadb
+click
+click-didyoumean
+click-plugins
+click-repl
+coloredlogs
+constantly
+cryptography
+daphne
+dataclasses-json
+Deprecated
+distro
+Django
+django-cors-headers
+django-environ
+djangorestframework
+dnspython
+email_validator
+faiss-cpu
+fastapi
+fastapi-cli
+filelock
+flatbuffers
+frozenlist
+fsspec
+google-auth
+googleapis-common-protos
+greenlet
+grpcio
+h11
+httpcore
+httptools
+httpx
+huggingface-hub
+humanfriendly
+hyperlink
+idna
+ijson
+importlib-metadata
+importlib_resources
+incremental
+inflection
+Jinja2
+jsonpatch
+jsonpointer
+jsonschema
+jsonschema-specifications
+kombu
+kubernetes
+langchain
+langchain-chroma
+langchain-community
+langchain-core
+langchain-openai
+langchain-text-splitters
+langgraph
+langsmith
+markdown-it-py
+MarkupSafe
+marshmallow
+mdurl
+mmh3
+monotonic
+mpmath
+msgpack
+multidict
+mypy-extensions
+neovim
+numpy
+oauthlib
+onnxruntime
+openai
+openapi
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-instrumentation
+opentelemetry-instrumentation-asgi
+opentelemetry-instrumentation-fastapi
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+orjson
+overrides
+packaging
+parse
+parse-type
+posthog
+prompt_toolkit
+protobuf
+psycopg
+psycopg2
+pulsar-client
+pyasn1
+pyasn1_modules
+pycparser
+pydantic
+pydantic_core
+Pygments
+pynvim
+pyOpenSSL
+PyPika
+pyproject_hooks
+python-dateutil
+python-dotenv
+python-multipart
+pytz
+PyYAML
+redis
+referencing
+regex
+requests
+requests-oauthlib
+rich
+rpds-py
+rsa
+service-identity
+setuptools
+shellingham
+six
+sniffio
+soupsieve
+SQLAlchemy
+sqlparse
+starlette
+sympy
+tenacity
+tiktoken
+tokenizers
+tqdm
+Twisted
+txaio
+typer
+typing-inspect
+typing_extensions
+tzdata
+ujson
+urllib3
+uuid6
+uvicorn
+uvloop
+vine
+watchfiles
+wcwidth
+websocket-client
+websockets
+wrapt
+yarl
+zipp
+zope.interface
